@@ -1,4 +1,7 @@
 version 1.1.3
+- When the $add() method of a loggger is called by lumberjack it now passes
+  a 'meta' argument containing an 'src' string that is taken from the 'srcref'
+  object when parsing the R script.
 - bugfix: prefix label for file output was ignored since 1.1.2
 
 version 1.1.2
